<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ও কলকাতা</string>
    <string name="activity_name">ও কলকাতা - মনের কাছাকাছি</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="latest">এই সম​য়​</string>
    <string name="aboutUs">আমাদের কথা</string>
    <string name="writeToUs">লেখা পাঠান​</string>
    <string name="literature">সাহিত্য</string>
    <string name="aronyok">আরণ্যক</string>
    <string name="misc">পাঁচমিশেলি</string>
    <string name="galary">গ্যালারি</string>
    <string name="blog">ব্লগ</string>
    <string name="title_activity_web_view">ও কলকাতা</string>
    <string name="welcome_msg">Loading...</string>
    <string name="footer_msg">কপিরাইট © ২​০১৭ - ও কলকাতা</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="home_msg"></string>
    <string name="readMore">​        বিস্তারিত প​ড়ুন​......</string>
    <string name="Okolkata">ও কলকাতা - মনের কাছাকাছি</string>
    
</resources>
