<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity" >

     <HorizontalScrollView 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/menuLayout" 
		android:fillViewport="true"  >
	     <RelativeLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="0dp"
		    android:scrollbars="horizontal"
		    >
		    <Button
		        android:id="@+id/latest"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:text="@string/latest"
		        android:ems="8"
		        android:background="@drawable/commonbutton"
        		style="@style/commonButtonStyle"
		        android:layout_marginLeft="0dp"
		        android:layout_marginTop="0dp" />
		
		    <Button
		        android:id="@+id/aboutUs"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/latest"
		        android:layout_alignBottom="@+id/latest"
		        android:layout_marginLeft="0dp"
		        android:ems="8"
		        android:background="@drawable/commonbutton"
        		style="@style/commonButtonStyle"
		        android:layout_toRightOf="@+id/latest"
		        android:text="@string/aboutUs"/>
		    <Button
		        android:id="@+id/writeToUs"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/latest"
		        android:layout_alignBottom="@+id/latest"
		        android:layout_marginLeft="0dp"
		        android:ems="8"
		        android:background="@drawable/commonbutton"
        		style="@style/commonButtonStyle"
		        android:layout_toRightOf="@+id/aboutUs"
		        android:text="@string/writeToUs"/>
		     <Button
		        android:id="@+id/literature"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/latest"
		        android:layout_alignBottom="@+id/latest"
		        android:layout_marginLeft="0dp"
		        android:ems="8"
		        android:background="@drawable/commonbutton"
        		style="@style/commonButtonStyle"
		        android:layout_toRightOf="@+id/writeToUs"
		        android:text="@string/literature"/>
		      <Button
		        android:id="@+id/aronyok"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/latest"
		        android:layout_alignBottom="@+id/latest"
		        android:layout_marginLeft="0dp"
		        android:ems="8"
		        android:background="@drawable/commonbutton"
        		style="@style/commonButtonStyle"
		        android:layout_toRightOf="@+id/literature"
		        android:text="@string/aronyok"/>
		       <Button
		        android:id="@+id/misc"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/latest"
		        android:layout_alignBottom="@+id/latest"
		        android:layout_marginLeft="0dp"
		        android:ems="8"
		        android:background="@drawable/commonbutton"
        		style="@style/commonButtonStyle"
		        android:layout_toRightOf="@+id/aronyok"
		        android:text="@string/misc"/>
		
		    <Button
		        android:id="@+id/galary"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/latest"
		        android:layout_alignBottom="@+id/latest"
		        android:layout_marginLeft="0dp"
		        android:ems="8"
		        android:background="@drawable/commonbutton"
        		style="@style/commonButtonStyle"
		        android:layout_toRightOf="@+id/misc"
		        android:text="@string/galary"/>
		
		    <Button
		        android:id="@+id/blog"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/latest"
		        android:layout_alignBottom="@+id/latest"
		        android:layout_marginLeft="0dp"
		        android:ems="8"
		        android:background="@drawable/commonbutton"
        		style="@style/commonButtonStyle"
		        android:layout_toRightOf="@+id/galary"
		        android:text="@string/blog"/>
		    <Button
		        android:id="@+id/latestSlider"
		        style="@style/menuSliderStyle"
		        android:layout_width="match_parent"
		        android:layout_height="2dp"
		        android:ems="8"
		        android:layout_alignLeft="@+id/latest"
		        android:layout_below="@+id/latest"
		        android:visibility="gone"
		        android:layout_marginTop="1dp"
		        android:background="@drawable/slider"
        		android:text="" />
		    <Button
		        android:id="@+id/aboutUsSlider"
		        style="@style/menuSliderStyle"
		        android:layout_width="match_parent"
		        android:layout_height="2dp"
		        android:ems="8"
		        android:layout_alignLeft="@+id/aboutUs"
		        android:layout_below="@+id/aboutUs"
		        android:visibility="gone"
		        android:layout_marginTop="1dp"
		        android:background="@drawable/slider"
        		android:text="" />
		    <Button
		        android:id="@+id/writeToUsSlider"
		        style="@style/menuSliderStyle"
		        android:layout_width="match_parent"
		        android:layout_height="2dp"
		        android:ems="8"
		        android:layout_alignLeft="@+id/writeToUs"
		        android:layout_below="@+id/writeToUs"
		        android:visibility="gone"
		        android:layout_marginTop="1dp"
		        android:background="@drawable/slider"
        		android:text="" />
		    <Button
		        android:id="@+id/literatureSlider"
		        style="@style/menuSliderStyle"
		        android:layout_width="match_parent"
		        android:layout_height="2dp"
		        android:ems="8"
		        android:layout_alignLeft="@+id/literature"
		        android:layout_below="@+id/literature"
		        android:visibility="gone"
		        android:layout_marginTop="1dp"
		        android:background="@drawable/slider"
        		android:text="" />
		    <Button
		        android:id="@+id/aronyokSlider"
		        style="@style/menuSliderStyle"
		        android:layout_width="match_parent"
		        android:layout_height="2dp"
		        android:ems="8"
		        android:layout_alignLeft="@+id/aronyok"
		        android:layout_below="@+id/aronyok"
		        android:visibility="gone"
		        android:layout_marginTop="1dp"
		        android:background="@drawable/slider"
        		android:text="" />
		    <Button
		        android:id="@+id/miscSlider"
		        style="@style/menuSliderStyle"
		        android:layout_width="match_parent"
		        android:layout_height="2dp"
		        android:ems="8"
		        android:layout_alignLeft="@+id/misc"
		        android:layout_below="@+id/misc"
		        android:visibility="gone"
		        android:layout_marginTop="1dp"
		        android:background="@drawable/slider"
        		android:text="" />
		    <Button
		        android:id="@+id/galarySlider"
		        style="@style/menuSliderStyle"
		        android:layout_width="match_parent"
		        android:layout_height="2dp"
		        android:ems="8"
		        android:layout_alignLeft="@+id/galary"
		        android:layout_below="@+id/galary"
		        android:visibility="gone"
		        android:layout_marginTop="1dp"
		        android:background="@drawable/slider"
        		android:text="" />
		    <Button
		        android:id="@+id/blogSlider"
		        style="@style/menuSliderStyle"
		        android:layout_width="match_parent"
		        android:layout_height="2dp"
		        android:ems="8"
		        android:layout_alignLeft="@+id/blog"
		        android:layout_below="@+id/blog"
		        android:visibility="gone"
		        android:layout_marginTop="1dp"
		        android:background="@drawable/slider"
        		android:text="" />
	    </RelativeLayout>
    </HorizontalScrollView>
    <LinearLayout
 	  		android:id="@+id/homeWelcomeLayout" 
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_below="@+id/menuLayout"
			android:orientation="vertical" >
 	   	<ListView
			android:id="@+android:id/list"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
		</ListView>
 	 </LinearLayout> 
 	 <LinearLayout
 	  		android:id="@+id/homeWelcomeLayout" 
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_below="@+id/menuLayout"
			android:orientation="vertical" >
 	   	 <TextView
	        android:id="@+id/home_msg"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="2dp"
	        android:text="@string/home_msg" />
 	 </LinearLayout> 
 	 <LinearLayout
 	  		android:id="@+id/contentLayout" 
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_below="@+id/homeWelcomeLayout"
			android:orientation="vertical" >
 	   	<ListView
			android:id="@+android:id/list"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
		</ListView>
 	 </LinearLayout> 
 	 <TextView
     android:id="@+id/footerMsg"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/contentLayout"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="30dp"
     android:text="@string/footer_msg"/> 
 	    
</RelativeLayout>
